--- a/index.html
+++ b/index.html
@@ -6,11 +6,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <title>Ashraful Porthfolio</title>
 </head>
 
 <body>
-
+    <section id="container">
+        <div class="myself">
+            <h1>Welcome To</h1>
+            <h1><span class="ash">Ashraful Islam Kamran</span> World!</h1>
+            <h2>Build Climber and Train Stopper
+            </h2>
+            <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that
+                work. That's why I am learning and mastering web development. I will not stop until I become the Web
+                Development Hero.</p>
+            <a class="button" target="blank" href="https://www.facebook.com/ashraful.kaman.9"><span
+                    class="btn"></span>HIRE ME</a>
+        </div>
+        <div class="myself">
+            <img src="./image/myself.jpg" alt="">
+        </div>
 </body>
 
 </html>
