--- a/index.html
+++ b/index.html
@@ -28,6 +28,21 @@
         <div class="myself">
             <img src="./image/myself.jpg" alt="">
         </div>
+    </section>
+    <section id="dream">
+        <div class="myself">
+            <img src="./image/muself1.jpg" alt="">
+        </div>
+        <div class="myself">
+            <h1>Dream Big</h1>
+            <h2>Become a web developer</h2>
+            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma
+                how
+                to make simple website. My goal is to build 3 websites and learn advanced topic</p>
+            <a class="button" target="blank" href="https://www.facebook.com/ashraful.kaman.9"><span
+                    class="btn"></span>DOWNLOAD RESUME</a>
+        </div>
+    </section>
 </body>
 
 </html>
